# cykel

./: .gitignore  LICENSE  app.js  crypto.js  index.html  manifest.json  prediction.js  styles.css  sw.js
docs/: PLAN.md
pwa/: app.js  crypto.js  index.html  manifest.json  storage.js  styles.css  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  crypto.rs  main.rs  models.rs  prediction.rs  storage.rs
